# decodium3-build-macos

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Configuration.ui  README  README.en-GB.md  README.es.md  README.it.md  README.md  RELEASE_NOTES_1.5.3.md  RELEASE_NOTES_1.5.4.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.3.md  SecureSettings.cpp  decodium_x64.iss  decodium_x86.iss  helper_functions.cpp  main.cpp  otpgenerator.cpp  package_description.txt  revision_utils.cpp  wsjtx_config.h.in
Audio/: soundin.cpp  soundout.cpp
Darwin/: ReadMe_FT2.txt  ReadMe_FT2_JTDX.txt
Detector/: Detector.cpp  Detector.hpp
Modulator/: Modulator.cpp  Modulator.hpp
Network/: Cloudlog.cpp  FileDownload.cpp  FoxVerifier.cpp  MessageClient.cpp  NtpClient.cpp  NtpClient.hpp  PSKReporter.cpp  RemoteCommandServer.cpp  RemoteCommandServer.hpp  wsprnet.cpp
Transceiver/: DXLabSuiteCommanderTransceiver.cpp  HamlibTransceiver.cpp  TCITransceiver.cpp  TCITransceiver.hpp
bundle_fixup/: CMakeLists.txt
doc/: DT_NTP_ROBUST_SYNC_v1.2.0.md  GITHUB_RELEASE_BODY_1.5.3.md  GITHUB_RELEASE_BODY_1.5.4.md  GITHUB_RELEASE_BODY_v1.2.0.md  GITHUB_RELEASE_BODY_v1.3.3.md  MACOS_PORTING_v1.2.0.md  README  README.en-GB.md  README.es.md  README.it.md  WEBAPP_SETUP_GUIDE.en-GB.md  WEBAPP_SETUP_GUIDE.es.md  WEBAPP_SETUP_GUIDE.it.md
lib/: ft2_decode.f90  shmem.cpp
logbook/: AD1CCty.cpp  WorkedBefore.cpp  logbook.cpp
map65/: mainwindow.cpp
qmap/: mainwindow.cpp
scripts/: release-macos.sh
tests/: CMakeLists.txt  test_filedownload.cpp  test_qt_helpers.cpp
translations/: wsjtx_ca.ts  wsjtx_da.ts  wsjtx_de.ts  wsjtx_en.ts  wsjtx_en_GB.ts  wsjtx_es.ts  wsjtx_fr.ts  wsjtx_it.ts  wsjtx_ja.ts  wsjtx_ru.ts  wsjtx_zh.ts  wsjtx_zh_TW.ts
widgets/: DXClusterWindow.cpp  DXClusterWindow.h  FoxWaveGuard.hpp  IonosphericForecastWindow.cpp  TimeSyncPanel.cpp  about.cpp  astro.cpp  displaytext.cpp  fastgraph.cpp  logqso.cpp  mainwindow.cpp  mainwindow.h  (+4 more)
(+15 files in other folders)
